# mim-itp

./: .gitignore  CMakeLists.txt  README.md
1_arytmetyka/: CMakeLists.txt  README.md  ary.c  ary.h  main.c  przyklad.c
2_trzy_rozne/: CMakeLists.txt  README.md  brute.c  main.c
2_trzy_rozne/tests_trzy/: gen.cpp  testerka.sh  wzor.c
3_origami/: CMakeLists.txt  README.md  opcje  origami.c  wizualizator.cpp
4_kolejki/: CMakeLists.txt  README.md  kol.cpp  kol.h  main.cpp
5_nextInRange/: CMakeLists.txt  README.md  main.cpp  next.cpp  next.h  opcjeCpp  testerka.cpp
6_ukladanka/: CMakeLists.txt  README.md  gen.cpp  ukl.cpp  ukls1.cpp
6_ukladanka/tests_ukl/: gen.cpp  prog.cpp  spr.cpp  spr2.cpp  sprawdzarka.sh  sprawdzarka2.sh  wzor.cpp
